fixing design rebuiliding and fixing layout problems

--- a/offres.css
+++ b/offres.css
@@ -30,11 +30,14 @@ a:visited {
   text-decoration: none;
 }
 section {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   max-width: 1600px;
   width: 100%;
   margin: 0 auto;
   height: -webkit-fill-available;
-  overflow: hidden;
 }
 header {
   position: relative;
@@ -42,7 +45,15 @@ header {
   height: 163px;
   margin: 0 auto;
   z-index: 7;
-  overflow: hidden;
+}
+.logo {
+  width: 238px;
+  height: 200px;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 76%;
+  left: 50%;
+  z-index: 9999;
 }
 .headBg {
   max-width: 1600px;
@@ -80,12 +91,11 @@ footer {
   z-index: 4;
 }
 .all-bg {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   z-index: 0;
-  overflow: hidden;
 }
 .bg-container-img img {
   width: 100%;
@@ -132,7 +142,9 @@ footer {
 
 .offre-container {
   width: 100%;
-  position: absolute;
+  height: 100%;
+  min-width: 100%;
+  position: relative;
   top: 60px;
   padding: 60px;
   z-index: 4;
@@ -203,28 +215,21 @@ footer {
 .swiper-scrollbar {
   margin-bottom: 10px;
 }
-.swiper-pagination {
-  display: none;
-}
-.swiper-space {
-  display: none;
-}
+
 /*responsive*/
 @media screen and (max-width: 1206px) {
   .kayak {
-    max-width: 100%;
-    width: 210px;
-    height: 207px;
-    position: absolute;
-    top: -29px;
-    left: 59%;
-    z-index: 6;
+    display: none;
   }
 }
 @media screen and (max-width: 990px) {
-  .kayak {
-    display: none;
+  .headBg {
+    width: 100%;
   }
+  .green-footer {
+    max-width: 100%;
+  }
+
   .offre {
     display: flex;
     flex-direction: column;
@@ -248,12 +253,19 @@ footer {
   }
   .swiper-pagination {
     display: flex;
-    transform: translateX(42%);
+    right: 50%;
+    transform: translateX(47%);
     margin-bottom: 20px;
   }
 
   .swiper-scrollbar {
     display: none;
+  }
+}
+@media screen and (max-width: 600px) {
+  .swiper-pagination {
+    display: flex;
+    transform: translateX(45%);
   }
 }
 @media screen and (max-width: 400px) {
@@ -262,7 +274,7 @@ footer {
     padding: 34px 34px 34px 33px;
   }
   .btn-offers {
-    top: 94vh;
+    top: 81vh;
   }
   .swiper-space {
     width: 100%;
